--- a/Aula01_MVC/Views/Home/Index.cshtml
+++ b/Aula01_MVC/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Batata Page";
 }
 
+<!--<h1>@ViewData["Title"]</h1>-->
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    <h3>@ViewData["Name"]</h3>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
